tests/snapshots/scenarios/013_search_core_payload_empty_graph-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "013_search_core_payload_empty_graph",
  "status": "validated"
}
