tests/snapshots/scenarios/014_search_core_phrase_specific-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "014_search_core_phrase_specific",
  "status": "validated"
}
