tests/snapshots/scenarios/015_search_core_sort_path-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "search_core",
  "files": [
    "result.json"
  ],
  "scenario_id": "015_search_core_sort_path",
  "status": "validated"
}
