tests/snapshots/scenarios/016_agentic_execution_without_persistence-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "agentic_expansion",
  "files": [
    "result.json"
  ],
  "scenario_id": "016_agentic_execution_without_persistence",
  "status": "validated"
}
