tests/snapshots/scenarios/019_build_scope_excluded_dirs-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "build_scope",
  "files": [
    "result.json"
  ],
  "scenario_id": "019_build_scope_excluded_dirs",
  "status": "validated"
}
