tests/snapshots/scenarios/020_build_scope_hidden_dirs-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "build_scope",
  "files": [
    "result.json"
  ],
  "scenario_id": "020_build_scope_hidden_dirs",
  "status": "validated"
}
