tests/snapshots/scenarios/021_build_scope_include_dirs-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "build_scope",
  "files": [
    "result.json"
  ],
  "scenario_id": "021_build_scope_include_dirs",
  "status": "validated"
}
