tests/snapshots/scenarios/023_cache_detects_file_change-result.snap
---
source: packages/rust/crates/xiuxian-wendao/tests/support/scenario_framework.rs
expression: result
---
{
  "category": "cache_build",
  "files": [
    "result.json"
  ],
  "scenario_id": "023_cache_detects_file_change",
  "status": "validated"
}
